--- a/WinAPI_2504/WinAPI_2504.vcxproj.filters
+++ b/WinAPI_2504/WinAPI_2504.vcxproj.filters
@@ -75,6 +75,9 @@
     <ClInclude Include="Framework\Manager\SceneManager.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="Scenes\LobbyScene.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="WinAPI_2504.cpp">
@@ -120,6 +123,9 @@
       <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="Framework\Manager\SceneManager.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="Scenes\LobbyScene.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
