--- a/WinAPI_2504/WinAPI_2504.vcxproj
+++ b/WinAPI_2504/WinAPI_2504.vcxproj
@@ -147,6 +147,7 @@
     <ClInclude Include="Objects\Player.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="Scenes\ChoiceCharacterScene.h" />
+    <ClInclude Include="Scenes\GameOverScene.h" />
     <ClInclude Include="Scenes\LobbyScene.h" />
     <ClInclude Include="Scenes\Scene.h" />
     <ClInclude Include="Scenes\ShootingScene.h" />
@@ -170,6 +171,7 @@
     <ClCompile Include="Objects\PaintTool.cpp" />
     <ClCompile Include="Objects\Player.cpp" />
     <ClCompile Include="Scenes\ChoiceCharacterScene.cpp" />
+    <ClCompile Include="Scenes\GameOverScene.cpp" />
     <ClCompile Include="Scenes\LobbyScene.cpp" />
     <ClCompile Include="Scenes\ShootingScene.cpp" />
     <ClCompile Include="WinAPI_2504.cpp" />
