--- a/WinAPI_2504/WinAPI_2504.vcxproj.filters
+++ b/WinAPI_2504/WinAPI_2504.vcxproj.filters
@@ -84,6 +84,9 @@
     <ClInclude Include="Scenes\GameOverScene.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="Scenes\GameClearScene.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="WinAPI_2504.cpp">
@@ -138,6 +141,9 @@
       <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="Scenes\GameOverScene.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="Scenes\GameClearScene.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
