--- a/WinAPI_2504/WinAPI_2504.vcxproj
+++ b/WinAPI_2504/WinAPI_2504.vcxproj
@@ -132,10 +132,10 @@
   <ItemGroup>
     <ClInclude Include="Framework.h" />
     <ClInclude Include="Framework\GameManager.h" />
-    <ClInclude Include="Framework\Manager\EnemyManager.h" />
+    <ClInclude Include="Framework\Manager\EnemyController.h" />
     <ClInclude Include="Framework\Manager\SceneManager.h" />
-    <ClInclude Include="Framework\Math\Vector2.h" />
     <ClInclude Include="Framework\Manager\ScoreManager.h" />
+    <ClInclude Include="Framework\Math\Vector2.h" />
     <ClInclude Include="Framework\Utilities\Input.h" />
     <ClInclude Include="Framework\Utilities\Singleton.h" />
     <ClInclude Include="Framework\Utilities\Timer.h" />
@@ -143,7 +143,13 @@
     <ClInclude Include="Objects\BulletManager.h" />
     <ClInclude Include="Objects\Circle.h" />
     <ClInclude Include="Objects\Enemy.h" />
-    <ClInclude Include="Objects\PaintTool.h" />
+    <ClInclude Include="Objects\EnemyManager.h" />
+    <ClInclude Include="Objects\HeavyPlayer.h" />
+    <ClInclude Include="Objects\HomingPlayer.h" />
+    <ClInclude Include="Objects\Item.h" />
+    <ClInclude Include="Objects\ItemManager.h" />
+    <ClInclude Include="Objects\ItemType.h" />
+    <ClInclude Include="Objects\NormalPlayer.h" />
     <ClInclude Include="Objects\Player.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="Scenes\ChoiceCharacterScene.h" />
@@ -160,7 +166,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="Framework\GameManager.cpp" />
-    <ClCompile Include="Framework\Manager\EnemyManager.cpp" />
+    <ClCompile Include="Framework\Manager\EnemyController.cpp" />
     <ClCompile Include="Framework\Manager\SceneManager.cpp" />
     <ClCompile Include="Framework\Manager\ScoreManager.cpp" />
     <ClCompile Include="Framework\Utilities\Input.cpp" />
@@ -169,7 +175,11 @@
     <ClCompile Include="Objects\BulletManager.cpp" />
     <ClCompile Include="Objects\Circle.cpp" />
     <ClCompile Include="Objects\Enemy.cpp" />
-    <ClCompile Include="Objects\PaintTool.cpp" />
+    <ClCompile Include="Objects\EnemyManager.cpp" />
+    <ClCompile Include="Objects\HeavyPlayer.cpp" />
+    <ClCompile Include="Objects\HomingPlayer.cpp" />
+    <ClCompile Include="Objects\Item.cpp" />
+    <ClCompile Include="Objects\ItemManager.cpp" />
     <ClCompile Include="Objects\Player.cpp" />
     <ClCompile Include="Scenes\ChoiceCharacterScene.cpp" />
     <ClCompile Include="Scenes\GameClearScene.cpp" />
