--- a/WinAPI_2504/WinAPI_2504.vcxproj.filters
+++ b/WinAPI_2504/WinAPI_2504.vcxproj.filters
@@ -123,6 +123,18 @@
     <ClInclude Include="Objects\Enemys\EnemyKamikaze.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="Button\Button.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="Button\LobbyButton.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="Button\CharacterButton.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="Button\EPlayerType.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="WinAPI_2504.cpp">
@@ -210,6 +222,15 @@
       <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="Objects\Enemys\EnemyKamikaze.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="Button\Button.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="Button\LobbyButton.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="Button\CharacterButton.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
