--- a/WinAPI_2504/WinAPI_2504.vcxproj.filters
+++ b/WinAPI_2504/WinAPI_2504.vcxproj.filters
@@ -135,6 +135,15 @@
     <ClInclude Include="Button\EPlayerType.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="Button\NormalPlayerButton.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="Button\HeavyPlayerButton.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="Button\HomingPlayerButton.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="WinAPI_2504.cpp">
@@ -231,6 +240,15 @@
       <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="Button\CharacterButton.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="Button\NormalPlayerButton.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="Button\HeavyPlayerButton.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="Button\HomingPlayerButton.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
